--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon-32x32.png" type="image/png">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
 </head>
 <body>
     <main>
         <section class="border-box">
-            <div class="image">
-                <img src="images/image-qr-code.png" alt="This is a qr code"/>
-            </div>
+            <img src="images/image-qr-code.png" alt="This is a qr code" class="image"/>
+            <h3 class="subheading">Improve your front-end skills by building projects</h3>
+            <p class="paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </section>
     </main>
 </body>
