--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>QR Code</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon-32x32.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
